<resources>
    <string name="app_name">InDetect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">InDetect</string>
    <string name="nav_header_subtitle">maldonadoq@indetect.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>


    <string name="classify_car">Classify Car</string>
    <string name="classify_animal">Classify Animal</string>
    <string name="detect_object">Detect Object</string>
    <string name="classify_car_rt">Car Real Time</string>
    <string name="detect_object_rt">Object Real Time</string>

    <string name="toggle_camera">Toggle Camera</string>
    <string name="toggle_flash">Toggle Flash</string>
    <string name="upload">Upload</string>
    <string name="image_result_descr">Image Result</string>

    <string name="local">Cellphone</string>
    <string name="localT">Local</string>
    <string name="server">Server</string>

    <string name="in">Sign In</string>
    <string name="up">Sign Up</string>

    <string name="skip">Skip</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="forgot">Forgot your password</string>

    <string name="logout">LogOut</string>
    <string name="user">User Image</string>

    <string name="default_email">maldonadoq.percy@gmail.com</string>
    <string name="default_password">maldonado</string>

    <string name="running">Running Processing</string>

    <string name="select">Select Action</string>
    <string name="real_time">Real Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
