<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="80dp"
            android:src="@mipmap/img_pig"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom|center"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_email"
                android:layout_gravity="center"
                android:contentDescription="@string/email"
                />

            <EditText
                android:id="@+id/si_TxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:text="@string/default_email"
                android:textSize="@dimen/size"
                android:layout_gravity="bottom|center"
                android:importantForAutofill="no"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|center"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_password"
                android:layout_gravity="center"
                android:contentDescription="@string/password"
                />

            <EditText
                android:id="@+id/si_TxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="@dimen/size"
                android:text="@string/default_password"
                android:hint="@string/password"
                android:layout_gravity="bottom|center"
                android:importantForAutofill="no"
                />
        </LinearLayout>

        <Button
            android:id="@+id/si_BtnSignIn"
            android:layout_width="@dimen/sign"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_local_style"
            android:text="@string/in"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/si_Forgot"
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/forgot"
            />
        <TextView
            android:id="@+id/si_SignUp"
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:text="@string/up"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>