<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="80dp"
            android:src="@mipmap/img_app_init"
            android:contentDescription="@string/app_name" />

        <Button
            android:id="@+id/cm_BtnSignIn"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_local_style"
            android:text="@string/in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cm_BtnSignUp"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_server_style"
            android:text="@string/up"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>