<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/left_margin"
    android:paddingLeft="@dimen/left_margin"
    android:paddingTop="@dimen/top_margin"
    android:paddingEnd="@dimen/right_margin"
    android:paddingRight="@dimen/right_margin"
    android:paddingBottom="@dimen/bottom_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/img_sign_up" />

        <LinearLayout
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/name"
                android:src="@mipmap/ic_user" />

            <EditText
                android:id="@+id/su_TxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="@dimen/size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/email"
                android:src="@mipmap/ic_email" />

            <EditText
                android:id="@+id/su_TxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/sign"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:contentDescription="@string/password"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/su_TxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textSize="@dimen/size" />
        </LinearLayout>

        <Button
            android:id="@+id/su_BtnSignUp"
            android:layout_width="@dimen/sign"
            android:layout_height="40dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_server_style"
            android:text="@string/up"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>