<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/defaultBackground">

    <LinearLayout
        android:layout_width="355dp"
        android:layout_height="550dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/result_AviLoaderHolderView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="110dp"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/result_AviLoader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:indicatorColor="@color/colorPrimary"
                app:indicatorName="BallClipRotatePulseIndicator" />

        </RelativeLayout>

        <TextView
            android:id="@+id/result_TvLoadingRecognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:text="@string/running"
            android:padding="10dp"
            />

        <ImageView
            android:id="@+id/result_IViewResult"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:contentDescription="@string/image_result_descr"
            />

        <TextView
            android:id="@+id/result_TvResult"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:scrollbars="vertical"
            android:textSize="@dimen/size"
            />

        <Button
            android:id="@+id/result_BtnUpload"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:background="@drawable/ic_local_style"
            android:text="@string/upload"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>